--- a/rnw_sympy.ipynb
+++ b/rnw_sympy.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPizURu3OT4G2bn8EWU99I0",
+      "authorship_tag": "ABX9TyNSFX+3polu34lc2cUTNojs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import sympy\n",
         "sympy.init_printing()"
       ],
-      "execution_count": 63,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "                       [s, c,0],\n",
         "                       [0, 0,1]])"
       ],
-      "execution_count": 64,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -80,14 +80,14 @@
         "cone = {\n",
         "    'm': sympy.symbols('m'),\n",
         "    'g': sympy.symbols('g'),\n",
-        "    'R': sympy.symbols('r'),\n",
+        "    'r': sympy.symbols('r'),\n",
         "    'xCM': sympy.symbols('xCM'),\n",
         "    'zCM': sympy.symbols('zCM'),\n",
         "    'xCP': sympy.symbols('xCP'),\n",
         "    'zCP': sympy.symbols('zCP'),\n",
         "}"
       ],
-      "execution_count": 65,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "             (q4.diff(),dq4),(dq4.diff(),ddq4),\n",
         "             (q5.diff(),dq5),(dq5.diff(),ddq5)]"
       ],
-      "execution_count": 66,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -175,16 +175,16 @@
         "id": "K8LqCvgmGHyI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 99
+          "height": 79
         },
-        "outputId": "5428b397-8e8f-4af1-cdda-8978f6d56c11"
+        "outputId": "cdc3f8ab-f8ca-4093-dd51-07753487485f"
       },
       "source": [
         "R_wb = rot_z(psi) * rot_y(theta) * rot_z(phi)\n",
-        "T_wb = sympy.Matrix([ q1, q2, cone['R'] * sympy.sin(theta)])\n",
+        "T_wb = sympy.Matrix([ q1, q2, cone['r'] * sympy.sin(theta)])\n",
         "R_wb, T_wb"
       ],
-      "execution_count": 67,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +213,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 69
         }
       ]
     },
@@ -225,13 +225,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "c16f0b7a-82cd-453d-c662-d43dae0829ac"
+        "outputId": "b290381a-8625-4e39-cf27-43f15df8a5b1"
       },
       "source": [
         "CoM_b = sympy.Matrix([ cone['xCM'], 0, cone['zCM'] ])\n",
         "CoM_b"
       ],
-      "execution_count": 68,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 70
         }
       ]
     },
@@ -260,13 +260,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "deb3812d-b7c2-497d-d895-4cf883890fc9"
+        "outputId": "07f1a25b-28e0-404a-ea6c-6007752ab589"
       },
       "source": [
         "CoM_w = R_wb * CoM_b + T_wb\n",
         "CoM_w"
       ],
-      "execution_count": 69,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 71
         }
       ]
     },
@@ -301,13 +301,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 99
         },
-        "outputId": "08749a59-421e-44ef-a4e9-095b78205c41"
+        "outputId": "d64ecaa6-2ddf-463f-c962-2878660b3976"
       },
       "source": [
         "CoM_w_dot = sympy.simplify(CoM_w.diff(t).subs(sub_rules))\n",
         "CoM_w_dot"
       ],
-      "execution_count": 70,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 72
         }
       ]
     },
@@ -363,7 +363,7 @@
         "L = T-V\n",
         "L = sympy.simplify(L)"
       ],
-      "execution_count": 71,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -386,14 +386,15 @@
       },
       "source": [
         "eoms = sympy.Matrix([\n",
-        "      (L.diff(dq1).diff(t)-L.diff(q1)).subs(sub_rules),\n",
-        "      (L.diff(dq2).diff(t)-L.diff(q2)).subs(sub_rules),\n",
-        "      (L.diff(dq3).diff(t)-L.diff(q3)).subs(sub_rules),\n",
-        "      (L.diff(dq4).diff(t)-L.diff(q4)).subs(sub_rules),\n",
-        "      (L.diff(dq5).diff(t)-L.diff(q5)).subs(sub_rules)\n",
-        "])"
+        "      L.diff(dq1).diff(t)-L.diff(q1),\n",
+        "      L.diff(dq2).diff(t)-L.diff(q2),\n",
+        "      L.diff(dq3).diff(t)-L.diff(q3),\n",
+        "      L.diff(dq4).diff(t)-L.diff(q4),\n",
+        "      L.diff(dq5).diff(t)-L.diff(q5)\n",
+        "])\n",
+        "eoms = eoms.subs(sub_rules)"
       ],
-      "execution_count": 72,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -407,7 +408,7 @@
         "    return expr.subs([(syms[j],sympy.S.One) if i==j else (syms[j],0) for j in range(len(syms))])\n",
         "  return [ calc_term(i) for i in range(len(syms))]"
       ],
-      "execution_count": 73,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -431,10 +432,9 @@
       "source": [
         "h = eoms.subs([(ddq1,0),(ddq2,0),(ddq3,0),(ddq4,0),(ddq5,0)])\n",
         "Mddq = eoms-h\n",
-        "\n",
         "M = sympy.Matrix([linear_decomp(Mddq[i,0],ddq) for i in range(5)])"
       ],
-      "execution_count": 74,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
         "M = sympy.simplify(M)\n",
         "h = sympy.simplify(h)"
       ],
-      "execution_count": 75,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -466,14 +466,14 @@
           "height": 79
         },
         "id": "3QlYPo88h95Z",
-        "outputId": "ab6329a9-a9ff-490f-93e4-f78cff7bde54"
+        "outputId": "b2c04231-fbcd-4f78-f2b9-9186577d5bcd"
       },
       "source": [
-        "wx = R_wb.diff(t).subs(sub_rules) * (R_wb.T)\n",
-        "wx = sympy.simplify(wx)\n",
-        "wx"
+        "omega_hat = R_wb.diff(t).subs(sub_rules) * (R_wb.T)\n",
+        "omega_hat = sympy.simplify(omega_hat)\n",
+        "omega_hat"
       ],
-      "execution_count": 76,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +502,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 78
         }
       ]
     },
@@ -514,13 +514,13 @@
           "height": 79
         },
         "id": "xEJDcduPiEYy",
-        "outputId": "9532cd2e-7074-4b81-c52d-b47a572b30a6"
+        "outputId": "805502c7-716d-440c-d758-d4843c97ffe1"
       },
       "source": [
-        "ang_vel = sympy.Matrix([ wx[2,1], wx[0,2], wx[1,0] ])\n",
-        "ang_vel"
+        "omega = sympy.Matrix([ omega_hat[2,1], omega_hat[0,2], omega_hat[1,0] ])\n",
+        "omega"
       ],
-      "execution_count": 77,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +537,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 79
         }
       ]
     },
@@ -549,13 +549,13 @@
           "height": 79
         },
         "id": "It4RyEkwiHhl",
-        "outputId": "3437c3ea-4304-4e84-e174-49de33136b95"
+        "outputId": "14fec93f-7272-42ca-bd35-a362889eee62"
       },
       "source": [
-        "r_ac = rot_z(psi) * rot_y(theta) * sympy.Matrix([ -cone['R'], 0 ,0 ])\n",
-        "r_ac"
+        "r_CA = rot_z(psi) * rot_y(theta) * sympy.Matrix([ -cone['r'], 0 ,0 ])\n",
+        "r_CA"
       ],
-      "execution_count": 78,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 80
         }
       ]
     },
@@ -584,14 +584,14 @@
           "height": 79
         },
         "id": "OY1UJkD6iKaa",
-        "outputId": "cfeb5b62-f806-4df2-e809-7ffd6a949462"
+        "outputId": "1dc4607f-2a4d-4fba-effd-6cae330c4a95"
       },
       "source": [
-        "va = ang_vel.cross(r_ac)\n",
-        "va = sympy.simplify(va)\n",
-        "va"
+        "vel_A = omega.cross(r_CA)\n",
+        "vel_A = sympy.simplify(vel_A)\n",
+        "vel_A"
       ],
-      "execution_count": 79,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +614,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 81
         }
       ]
     },
@@ -626,29 +626,29 @@
           "height": 58
         },
         "id": "WhhrYMF-iOJB",
-        "outputId": "36867765-390a-4305-d4a9-186683b03f47"
+        "outputId": "b5ac8886-f3af-4c70-9eb5-921eb9a98a06"
       },
       "source": [
-        "rolling_eqs = [ va[0,0] - dq1, va[1,0] - dq2 ]\n",
-        "A_nh = sympy.Matrix([linear_decomp(eq,dq) for eq in rolling_eqs])\n",
+        "rolling_constrains = [ dq1 - vel_A[0,0], dq2 - vel_A[1,0] ]\n",
+        "A_nh = sympy.Matrix([linear_decomp(eq,dq) for eq in rolling_constrains])\n",
         "A_nh"
       ],
-      "execution_count": 80,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/latex": "$\\displaystyle \\left[\\begin{matrix}-1 & 0 & r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & r \\sin{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} & r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)}\\\\0 & -1 & - r \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\sin{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & - r \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)}\\end{matrix}\\right]$",
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & - r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & - r \\sin{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} & - r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)}\\\\0 & 1 & r \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\cos{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & - r \\sin{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)} \\sin{\\left(\\operatorname{q_{4}}{\\left(t \\right)} \\right)} & r \\cos{\\left(\\operatorname{q_{3}}{\\left(t \\right)} \\right)}\\end{matrix}\\right]$",
             "text/plain": [
-              "⎡-1  0   r⋅sin(q₃(t))⋅cos(q₄(t))   r⋅sin(q₄(t))⋅cos(q₃(t))  r⋅sin(q₃(t)) ⎤\n",
-              "⎢                                                                        ⎥\n",
-              "⎣0   -1  -r⋅cos(q₃(t))⋅cos(q₄(t))  r⋅sin(q₃(t))⋅sin(q₄(t))  -r⋅cos(q₃(t))⎦"
+              "⎡1  0  -r⋅sin(q₃(t))⋅cos(q₄(t))  -r⋅sin(q₄(t))⋅cos(q₃(t))  -r⋅sin(q₃(t))⎤\n",
+              "⎢                                                                       ⎥\n",
+              "⎣0  1  r⋅cos(q₃(t))⋅cos(q₄(t))   -r⋅sin(q₃(t))⋅sin(q₄(t))  r⋅cos(q₃(t)) ⎦"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 82
         }
       ]
     },
@@ -669,19 +669,18 @@
         "id": "znzFiYjkuORJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 78
+          "height": 58
         },
-        "outputId": "365053c3-2c26-4490-f559-287b0d635c12"
+        "outputId": "9ff74055-1fc9-411d-8de4-d20b80331788"
       },
       "source": [
         "CP_b = sympy.Matrix([ cone['zCP'], 0, cone['zCP'] ])\n",
         "CP_w = R_wb * CP_b + T_wb\n",
         "CP_dot_w = CP_w.diff(t).subs(sub_rules)\n",
-        "#A_cp = sympy.Matrix([linear_decomp(eq,dq) for eq in CP_dot_w])\n",
-        "A_cp = sympy.Matrix([linear_decomp(eq,dq) for eq in [CP_dot_w[0],CP_dot_w[1]]])\n",
+        "A_cp = sympy.Matrix([linear_decomp(eq,dq) for eq in CP_dot_w[:2]])\n",
         "A_cp"
       ],
-      "execution_count": 81,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -704,20 +703,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 83
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UwdX64tx11r7"
-      },
-      "source": [
-        "#sympy.simplify(A_cp[:,2:5].det())"
-      ],
-      "execution_count": 82,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -742,16 +730,16 @@
         "id": "A0nSkfo0xwGt",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 99
         },
-        "outputId": "9895e612-7b9d-4364-819e-cef99c76a60d"
+        "outputId": "162d6095-f80f-445e-d933-2a7d5d9e8a7b"
       },
       "source": [
-        "A = sympy.Matrix([-A_nh, A_cp])\n",
+        "A = sympy.Matrix([A_nh, A_cp])\n",
         "A = sympy.simplify(A)\n",
         "A"
       ],
-      "execution_count": 83,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -786,7 +774,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 84
         }
       ]
     },
@@ -799,7 +787,7 @@
         "dAdt = A.diff(t).subs(sub_rules)\n",
         "dAdt = sympy.simplify(dAdt)"
       ],
-      "execution_count": 84,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -823,7 +811,7 @@
         "M_left = sympy.Matrix([[-A,sympy.zeros(4)],[M, -A.T]])\n",
         "M_right = sympy.Matrix([[dAdt*sympy.Matrix(dq)],[-h]])"
       ],
-      "execution_count": 85,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -844,7 +832,7 @@
         "e_M_left = M_left.subs(sub_rule_out)\n",
         "e_M_right = M_right.subs(sub_rule_out)"
       ],
-      "execution_count": 86,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -855,12 +843,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 39
         },
-        "outputId": "655d8493-8fcd-4d08-8289-e08e5e38d3b4"
+        "outputId": "d730719a-9065-4fae-a55a-40198a3609d9"
       },
       "source": [
         "e_M_left.free_symbols, e_M_right.free_symbols"
       ],
-      "execution_count": 87,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +862,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 87
+          "execution_count": 88
         }
       ]
     },
@@ -884,10 +872,10 @@
         "id": "t1ixyNYoL2fj"
       },
       "source": [
-        "f_M_left = sympy.lambdify([mq,cone['R'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],e_M_left)\n",
-        "f_M_right = sympy.lambdify([mq,mdq,cone['R'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],e_M_right)"
+        "f_M_left = sympy.lambdify([mq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],e_M_left)\n",
+        "f_M_right = sympy.lambdify([mq,mdq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],e_M_right)"
       ],
-      "execution_count": 88,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -902,29 +890,71 @@
         "}\n",
         "import dill\n",
         "dill.settings['recurse'] = True\n",
-        "dill.dump(outputs,open(\"rnw\", \"wb\"))"
+        "dill.dump(outputs,open(\"rnw_model\", \"wb\"))"
       ],
-      "execution_count": 89,
+      "execution_count": 90,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jj1Zjoe5qBY6"
+      },
+      "source": [
+        "### Use the Dynamic Model"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sDiCrZTXOW_f"
+        "id": "sDiCrZTXOW_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9dfeb414-16c0-4130-a348-f9eac08bbb3b"
       },
       "source": [
-        "rnw_model = dill.load(open(\"rnw\", \"rb\"))\n",
         "import numpy as np\n",
-        "fake_q = np.array([[0,0,0,0,0]]).T\n",
-        "fake_dq = np.array([[1,1,1,1,1]]).T\n",
-        "rnw_model['M_left'](fake_q,1,1,9.8,1,1,2,3)\n",
-        "rnw_model['M_right'](fake_q,fake_dq,1,1,9.8,1,1,2,3)\n",
         "\n",
+        "# load the dynamic model from file\n",
+        "rnw_model = dill.load(open(\"rnw_model\", \"rb\"))\n",
+        "\n",
+        "# see what's inside the dynamic model\n",
         "func2 = rnw_model['M_right']\n",
-        "??func2"
+        "??func2\n",
+        "\n",
+        "# input the current state - q and qdot\n",
+        "fake_q = np.array([[0,0,0,np.pi/4,0]]).T\n",
+        "fake_dq = np.array([[1,1,1,1,1]]).T\n",
+        "\n",
+        "# get the left and right matrix\n",
+        "eq_left = rnw_model['M_left'](fake_q,1,1,9.8,1,1,2,3)\n",
+        "eq_right = rnw_model['M_right'](fake_q,fake_dq,1,1,9.8,1,1,2,3)\n",
+        "\n",
+        "# solve the linear system, get q_dot_dot and lagarange multipliers\n",
+        "sol = np.linalg.solve(eq_left,eq_right)\n",
+        "sol_ddq = sol[:5].T\n",
+        "sol_multipliers = sol[5:].T\n",
+        "sol_ddq, sol_multipliers"
       ],
-      "execution_count": 90,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[ 1.66066017e+01,  1.25607397e-15, -2.00000000e+00,\n",
+              "          2.00710678e+01,  2.82842712e+00]]),\n",
+              " array([[-4.39238816e+00,  7.58107702e-16,  1.54634560e+01,\n",
+              "         -0.00000000e+00]]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
     }
   ]
 }
