--- a/rnw_sympy.ipynb
+++ b/rnw_sympy.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlHYkjoc20PpFIUdFr4SxR",
+      "authorship_tag": "ABX9TyMdSMr1EDWIzHkLO3JfjMkp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import sympy\n",
         "sympy.init_printing()"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,8 +68,23 @@
         "                       [s, c,0],\n",
         "                       [0, 0,1]])"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_WQVQ808YQVm"
+      },
+      "source": [
+        "`linear_decomp` function decompose the expression `expr` into linear combination of symbols `syms`\n",
+        "\n",
+        "$V_{result} \\cdot V_{syms} = S_{expr}$ \n",
+        "\n",
+        "$V$ for vector, $S$ for scalar\n",
+        "\n",
+        "It is used when we convert equations into matrix form."
+      ]
     },
     {
       "cell_type": "code",
@@ -82,7 +97,7 @@
         "    return expr.subs([(syms[j],sympy.S.One) if i==j else (syms[j],0) for j in range(len(syms))])\n",
         "  return [ calc_term(i) for i in range(len(syms))]"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +116,7 @@
         "    'zCP': sympy.symbols('zCP'),\n",
         "}"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,15 +172,33 @@
         "\n",
         "q = (q1, q2, q3, q4, q5)\n",
         "dq = (dq1, dq2, dq3, dq4, dq5)\n",
-        "ddq = (ddq1, ddq2, ddq3, ddq4, ddq5)\n",
-        "\n",
+        "ddq = (ddq1, ddq2, ddq3, ddq4, ddq5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t1yIfF0YZono"
+      },
+      "source": [
+        "Apply the following subtitution rule after calculating time derivative of an expression."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J9Vl9oixZpHz"
+      },
+      "source": [
         "sub_rules = [(q1.diff(),dq1),(dq1.diff(),ddq1),\n",
         "             (q2.diff(),dq2),(dq2.diff(),ddq2),\n",
         "             (q3.diff(),dq3),(dq3.diff(),ddq3),\n",
         "             (q4.diff(),dq4),(dq4.diff(),ddq4),\n",
         "             (q5.diff(),dq5),(dq5.diff(),ddq5)]"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +231,7 @@
         "T_wb = sympy.Matrix([ q1, q2, cone['r'] * sympy.sin(theta)])\n",
         "R_wb, T_wb"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,6 +265,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ObOly4T5ZW2J"
+      },
+      "source": [
+        "`CoM_b` is center of mass in body frame"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "csHdGqJqXDSs",
@@ -245,7 +287,7 @@
         "CoM_b = sympy.Matrix([ cone['xCM'], 0, cone['zCM'] ])\n",
         "CoM_b"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,6 +309,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BU9aL8z5ZhX6"
+      },
+      "source": [
+        "`CoM_w` is center of mass in world frame"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vOYrekYoYNpU",
@@ -280,7 +331,7 @@
         "CoM_w = R_wb * CoM_b + T_wb\n",
         "CoM_w"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +389,7 @@
         "CM_vel = sympy.simplify(CoM_w.diff(t).subs(sub_rules))\n",
         "CM_vel"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +445,7 @@
         "L = T-V\n",
         "L = sympy.simplify(L)"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -412,7 +463,7 @@
         "])\n",
         "eoms = eoms.subs(sub_rules)"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -438,7 +489,7 @@
         "Mddq = eoms-h\n",
         "M = sympy.Matrix([linear_decomp(Mddq[i,0],ddq) for i in range(5)])"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +501,7 @@
         "M = sympy.simplify(M)\n",
         "h = sympy.simplify(h)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,9 +512,11 @@
       "source": [
         "### Nonholonomic Constrain (Rolling Constrain)\n",
         "\n",
-        "$\\hat{\\omega} = \\dot{R}R^T$\n",
+        "$\\vec{v}_{A} = \\vec{\\omega} \\times \\vec{CA}$, where $C$ is contact point, $A$ is disk center. \n",
         "\n",
-        "$\\vec{v}_{A} = \\vec{\\omega} \\times \\vec{CA}$, where $C$ is contact point, $A$ is disk center"
+        "This is the mathematical representation of rolling without silping.\n",
+        "\n",
+        "Angular velocity $\\vec{\\omega}$ can be calculated through its skew-symmetric matrix form, $\\hat{\\omega} = \\dot{R}R^T$\n"
       ]
     },
     {
@@ -481,7 +534,7 @@
         "omega_hat = sympy.simplify(omega_hat)\n",
         "omega_hat"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +581,7 @@
         "omega = sympy.Matrix([ omega_hat[2,1], omega_hat[0,2], omega_hat[1,0] ])\n",
         "omega"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +616,7 @@
         "r_CA = rot_z(psi) * rot_y(theta) * sympy.Matrix([ -cone['r'], 0 ,0 ])\n",
         "r_CA"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +652,7 @@
         "vel_A = sympy.simplify(vel_A)\n",
         "vel_A"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -641,7 +694,7 @@
         "A_nh = sympy.Matrix([linear_decomp(eq,dq) for eq in rolling_constrains])\n",
         "A_nh"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +738,7 @@
         "CP_b = sympy.Matrix([ cone['zCP'], 0, cone['zCP'] ])\n",
         "CP_b"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +773,7 @@
         "CP_w = R_wb * CP_b + T_wb\n",
         "CP_w"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +814,7 @@
         "CP_dot_w = CP_w.diff(t).subs(sub_rules)\n",
         "CP_dot_w"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +873,7 @@
         "A_cp = sympy.Matrix([linear_decomp(eq,dq) for eq in CP_dot_w[:2]])\n",
         "A_cp"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,7 +932,7 @@
         "A = sympy.simplify(A)\n",
         "A"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +980,7 @@
         "dAdt = A.diff(t).subs(sub_rules)\n",
         "dAdt = sympy.simplify(dAdt)"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,8 +1004,32 @@
         "M_left = sympy.Matrix([[-A,sympy.zeros(4)],[M, -A.T]])\n",
         "M_right = sympy.Matrix([[dAdt*sympy.Matrix(dq)],[-h]])"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1wGWhUIXbWAS"
+      },
+      "source": [
+        "### Export the Dynamic Model\n",
+        "\n",
+        "The dynamic model is represented as a linear equation:\n",
+        "\n",
+        "$$\n",
+        "\\mathbf{M}_{\\mathbf{left}}(q) \n",
+        "\\begin{bmatrix}\n",
+        "\\ddot{q} \\\\\n",
+        "\\lambda\n",
+        "\\end{bmatrix}\n",
+        "= \\mathbf{M}_{\\mathbf{right}}(q,\\dot{q})\n",
+        "$$\n",
+        "\n",
+        "Functions to calculate $\\mathbf{M}_{\\mathbf{left}}$ and $\\mathbf{M}_{\\mathbf{right}}$ are exported.\n",
+        "\n",
+        "We want the output function from `sympy.lambdify` take $q$ and $\\dot{q}$ as vectors, this is achieved using `sympy.MatrixSymbol`"
+      ]
     },
     {
       "cell_type": "code",
@@ -972,8 +1049,17 @@
         "M_left = M_left.subs(sub_rule_out)\n",
         "M_right = M_right.subs(sub_rule_out)"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1OUmWFFibASJ"
+      },
+      "source": [
+        "We can see that, `M_left` only depend on $q$, while `M_right` depends on $q$ and $\\dot{q}$"
+      ]
     },
     {
       "cell_type": "code",
@@ -988,7 +1074,7 @@
       "source": [
         "M_left.free_symbols, M_right.free_symbols"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1101,7 @@
         "f_M_left = sympy.lambdify([mq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],M_left)\n",
         "f_M_right = sympy.lambdify([mq,mdq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],M_right)"
       ],
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1118,7 @@
         "dill.settings['recurse'] = True\n",
         "dill.dump(outputs,open(\"rnw_model\", \"wb\"))"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1077,7 +1163,7 @@
         "sol_multipliers = sol[5:].T\n",
         "sol_ddq, sol_multipliers"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
